--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,7 @@
 .home {
   text-align: center;
   padding: 50px;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif
 }
 
 .home-buttons {
