--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #4b6cb7;
+  background-color: #2B0504;
   color: white;
   padding: 15px 40px;
   position: sticky;
@@ -15,6 +15,7 @@
   margin-left: 20px;
   text-decoration: none;
   font-weight: bold;
+  font-family: "garamond", sans-serif; 
 }
 
 .nav-links a:hover {
@@ -23,4 +24,5 @@
 
 .nav-title {
   font-size: 1.5rem;
+  font-family: "garamond", sans-serif;
 }
