--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -35,3 +35,12 @@
   width: 100%;
   border-radius: 6px;
 }
+
+body{
+  background-image: url("pages.jpeg");
+  cursor: url('cursor.png') 0 0, auto;
+}
+
+* {
+  /* cursor: url('cursor.png') 0 0, auto; */
+}
