--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,6 +2,15 @@
   text-align: center;
   padding: 50px;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url("frontpage.PNG");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  color: white;
+  /* display: flex; */
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .home-buttons {
@@ -44,3 +53,15 @@ body{
 * {
   /* cursor: url('cursor.png') 0 0, auto; */
 }
+/* Home.css */
+/* .home {
+  background-image: url("images/frontpage.PNG");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
