--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: rgb(62, 36, 14);
   color: white;
-  padding: 15px 40px;
+  padding: 1px 40px;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -17,6 +17,7 @@
   text-decoration: none;
   font-weight: bold;
   font-family: 'Times New Roman', Times, serif;
+  font-size: 25px;
 }
 
 .nav-links a:hover {
@@ -24,7 +25,7 @@
 }
 
 .nav-title {
-  font-size: 1.5rem;
+  font-size: 35px;
   font-weight: "bold";
   font-family: 'La Belle Aurore', cursive;
 }
