--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -80,7 +80,7 @@ body{
   /* margin-top: 3px; */
   margin: 0 auto;
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-  font-family: fantasy;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   
 }
 
